# metron

./: .coverage.Mac_lan.pid35487.XODg5zRx.HNQIp837rWOh  .coverage.Mac_lan.pid62880.Xrhhro4x.HNQIp837rWOh  .dockerignore  .env.example  .gitignore  .stylelintrc.json  CLAUDE.md  Dockerfile  Dockerfile.tunnel  MEMORY_MONITORING.md  README.md  cloudflared-docker.yml  deploy-firebase.sh  deploy.sh  docker-compose.yml  docker-entrypoint.sh  eslint.config.mjs  firebase.json  gunicorn.conf.py  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements-dev.txt  requirements-prod.txt  requirements.txt  run-tests.sh  run_tests.sh  start-dev.sh  start-grafana.sh  start-prod.sh  start-signoz.sh  start-tunnel.sh  start.sh  wsgi.py
.github/badges/: cloud-run.json
.github/workflows/: ci-cd.yml
app/: __init__.py  bootstrap.py  broker_sync.py  cache.py  cas_service.py  config.py  constants.py  debug.py  error_handler.py  exposure_service.py  fetchers.py  firebase_store.py  logging_config.py  memory_monitor.py  memory_tracking_middleware.py  middleware.py  routes.py  scheduler.py  server.py  services.py  sse.py  telemetry.py  utils.py
app/api/: __init__.py  auth.py  cas_parser.py  company_classifier.py  entity_matcher.py  exposure.py  fixed_deposits.py  google_auth.py  google_sheets_client.py  holdings.py  ibja_gold_price.py  market_data.py  mf_market_data.py  nse_equity.py  physical_gold.py  provident_fund.py  sips.py  user_sheets.py  zerodha_client.py
app/static/: service-worker.js
app/static/css/: exposure.css  footer.css  landing.css  nav-header.css  public-pages.css  pwa-install.css  settings.css  styles.css  transactions.css
app/static/js/: app.js  cas-import.js  crud-manager.js  data-manager.js  exposure.js  index-ticker.js  nav.js  nifty50.js  pagination.js  portfolio-ui.js  pwa-install.js  refresh-ui.js  router.js  settings.js  sort-manager.js  sse-manager.js  summary-manager.js  table-detail.js  table-renderer.js  theme-manager.js  transactions.js  utils.js  visibility-manager.js
app/templates/: auth_error.html  callback_error.html  callback_success.html  contact.html  exposure.html  health.html  landing.html  nifty50.html  portfolio.html  privacy.html  table_detail.html  terms.html  transactions.html
app/templates/partials/: footer.html  nav_drawer.html  nav_header.html  pin_screen.html  (+1 more)
config/: config.json.example
data/: classification_cache.json  sector_labels.json
grafana/: loki-config.yml  promtail-config.yml
metron_app/: .gitignore  README.md  pubspec.yaml  setup.sh
metron_app/lib/: app.dart  main.dart
metron_app/test/: widget_test.dart
metron_app/web/: index.html  manifest.json
signoz/: clickhouse-cluster.xml
signoz/dashboards/: application-overview.json  auth-and-cache.json  external-apis.json
specs/: add-linters-formatter-static-code-analysis.md  company-exposure-analysis-dashboard.md  compile-market-data-and-store-in-memory-v2.md  compile-market-data-and-store-in-memory.md  parse-cams-pdf-auto-add-sync-mutual-funds.md  store-etfs-broker-data-in-sheets.md
tests/: __init__.py  conftest.py  run_tests.py  test_api_clients.py  test_api_services.py  test_bootstrap.py  test_broker_sync.py  test_cache.py  test_cas_parser.py  test_company_classifier.py  test_config.py  test_constants.py  test_entity_matcher.py  test_exposure.py  test_fetchers.py  test_firebase_store.py  test_fixed_deposits.py  test_gold_price.py  test_google_auth.py  test_google_sheets_client.py  test_integration.py  test_logging_config.py  test_market_data.py  test_mf_market_data.py  test_middleware.py  test_nse_equity.py  test_physical_gold.py  test_privacy_css.py  test_provident_fund.py  test_routes.py  test_server.py  test_services.py  test_sse.py  test_user_sheets.py  test_utils.py
(+33 files in other folders)
