[project]
name = "metron"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flask==2.3.3",
    "kiteconnect==5.0.1",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "python-dateutil==2.9.0",
    "cryptography==46.0.0",
    "beautifulsoup4==4.12.2",
    "cachetools>=5.3.0",
    "psutil>=5.9.0",
    "google-auth==2.23.4",
    "google-auth-oauthlib==1.1.0",
    "google-auth-httplib2==0.1.1",
    "google-api-python-client==2.108.0",
    "firebase-admin==6.4.0",
    "apscheduler>=3.11.2",
    "sentence-transformers>=5.0.0",
    "casparser>=0.8.1",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "pyrefly>=0.57.1",
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "ruff==0.11.12",
]
prod = [
    "gunicorn==22.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — handled by formatter
    "E402",  # module-import-not-at-top — intentional lazy imports to avoid circular deps
    "B007",  # unused-loop-control-variable — tuple unpacking often leaves vars unused
    "B017",  # assert-raises-exception — acceptable in test patterns
    "B904",  # raise-without-from — original_error is passed via constructor instead
    "B905",  # zip-without-strict — not needed for this codebase
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[tool.djlint]
profile = "jinja"
ignore = "H030,H031,H021,J004,J018,T028"
# H030,H031 - meta description/keywords: informational suggestions
# H021 - inline styles: valid use in Flask/Jinja templates
# J004 - static url_for: legacy static URLs, refactoring deferred
# J018 - internal url_for: legacy href paths, refactoring deferred
# T028 - spaceless Jinja tags: performance hint, not an error
